dhall/tests/type-inference/failure/unit/RecordSelectionNotPresent.txt
Type error: error: MissingRecordField
 --> <current file>:1:1
  |
1 | { y = {=} }.x
  | ^^^^^^^^^^^^^ MissingRecordField
  |
